@@ -1,2 +1,6 @@
-MD5 9c6f4b03f8ebf9913e0a714ae23efe55 rr_data0.5.0.tgz 8197224
 MD5 2b08290c63b8fa7fa707abdb6cd20db8 rr_bin_linux0.5.0.tgz 2015099
+RMD160 e6119774953551e6005d1062ca20d7808419bef3 rr_bin_linux0.5.0.tgz 2015099
+SHA256 dda7bbca4ec8268ed5ddbd681db640f5dec6b1571ccb169a74bb0a5b6c46ed4d rr_bin_linux0.5.0.tgz 2015099
+MD5 9c6f4b03f8ebf9913e0a714ae23efe55 rr_data0.5.0.tgz 8197224
+RMD160 d3e230932c72472d09aaadc9335e6369b1d6b090 rr_data0.5.0.tgz 8197224
+SHA256 f3e4cc84a324ee027d5d0c1cdd07771093a6290b965549012875c902b0b19483 rr_data0.5.0.tgz 8197224
